--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
       margin: 0;
       padding: 0;
       font-family: sans-serif;
-      background: #f5f5f5;
+      background: #ffffff46;
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
     }
-
+  
     h1, h2 {
       margin: 1em;
       max-width: 800px;
     }
-
+  
     .flipbook-container {
       perspective: 2000px;
       margin-top: 2em;
@@ -28,70 +28,78 @@
       height: 700px;
       position: relative;
     }
-
+  
     .photo {
       position: absolute;
-      width: 100%;
-      height: 100%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 80%;
+      height: 90%;
       backface-visibility: hidden;
       transform-style: preserve-3d;
-      transition: transform 0.8s ease;
+      transition: transform 0.8s ease, opacity 0.5s ease;
       cursor: pointer;
       box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      opacity: 0;
+      animation: fadeInUp 0.8s ease forwards;
     }
-
+  
     .photo img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       display: block;
       border-radius: 4px;
+      transition: transform 0.4s ease;
     }
-
+  
+    .photo:hover img {
+      transform: scale(1.07);
+    }
+  
     .flipped {
-      transform: rotateY(-180deg);
+      transform: translate(-50%, -50%) rotateY(-180deg);
     }
-
+  
     .buttons {
       margin-top: 20px;
     }
-
+  
     button {
       margin: 0 10px;
       padding: 10px 20px;
       font-size: 16px;
       border: none;
-      background: #6200ee;
-      color: white;
+      background: #f0f0f0;
+      color: rgb(0, 0, 0);
       border-radius: 8px;
       cursor: pointer;
       transition: background 0.3s ease;
     }
-
+  
     button:hover {
-      background: #3700b3;
+      background: #c0c0c0;
     }
-
+  
     #counter {
-  margin-top: 1em;
-  font-size: 18px;
-  color: #333;
-}
-.photo {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 80%;
-  height: 90%;
-  backface-visibility: hidden;
-  transform-style: preserve-3d;
-  transition: transform 0.8s ease;
-  cursor: pointer;
-  box-shadow: 0 0 10px rgba(0,0,0,0.2);
-}
-
+      margin-top: 1em;
+      font-size: 18px;
+      color: #333;
+    }
+  
+    @keyframes fadeInUp {
+      0% {
+        opacity: 0;
+        transform: translate(-50%, -40%);
+      }
+      100% {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+      }
+    }
   </style>
+  
 </head>
 <body>
   <h1>Pictures from the 8th Grade Graduates of 2025</h1>
